--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -363,8 +363,8 @@ msgid ""
 "with good manners in the first case, and with bad ones in the second."
 msgstr ""
 "Podívejte, pane! Támhle je chata! Půjdu se podívat, jestli v ní někdo "
-"bydlí! Ať už je to přítel nebo nepřítel, řekne nám něco o tomto místě, buď "
-"po dobrém nebo po zlém."
+"bydlí! Ať už je to přítel, nebo nepřítel, řekne nám něco o tomto místě, buď "
+"po dobrém, nebo po zlém."
 
 #. [message]: speaker=Geobard
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:176
