--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -250,7 +250,7 @@ msgid ""
 "the lines of the defenders made those who still insisted on fighting even "
 "more vulnerable, and soon it was the end!"
 msgstr ""
-"Vystrašeni a vyčerpani po mnoha dnech bitvy začali naverbovaní, boji "
+"Vystrašeni a vyčerpáni po mnoha dnech bitvy začali naverbovaní, boji "
 "nezvyklí civilisté dezertovat! Velké mezery, které se otevřely ve řadách "
 "obránců, učinily ty, kteří stále vytrvali v boji, ještě zranitelnějšími, a "
 "brzy byl konec!"
