--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -251,7 +251,7 @@ msgid ""
 "more vulnerable, and soon it was the end!"
 msgstr ""
 "Vystrašeni a vyčerpáni po mnoha dnech bitvy začali naverbovaní, boji "
-"nezvyklí civilisté dezertovat! Velké mezery, které se otevřely ve řadách "
+"nezvyklí civilisté dezertovat! Velké mezery, které se otevřely v řadách "
 "obránců, učinily ty, kteří stále vytrvali v boji, ještě zranitelnějšími, a "
 "brzy byl konec!"
 
